--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "embla-carousel": "^8.0.0-rc15",
     "embla-carousel-autoplay": "^8.0.0-rc15",
     "embla-carousel-react": "^8.0.0-rc15",
+    "express": "^4.18.2",
     "formik": "^2.4.5",
-    "google-maps-react": "^2.0.6",
     "lottie-react": "^2.4.0",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
@@ -32,6 +33,7 @@
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1",
@@ -71,5 +73,10 @@
   "devDependencies": {
     "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.6"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
